--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://kit.fontawesome.com/ac20bc98b6.js" crossorigin="anonymous"></script>
     <title>BeatDown</title>
+    <link rel="icon" type="image/png" href="./favicon.ico">
+    <script src="https://kit.fontawesome.com/ac20bc98b6.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
