--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>BeatDown</title>
-    <link rel="icon" type="image/png" href="./favicon.ico">
+    <link rel="icon" type="image/svg" href="./favicon.svg">
     <script src="https://kit.fontawesome.com/ac20bc98b6.js" crossorigin="anonymous"></script>
   </head>
   <body>
